--- a/index.ipynb
+++ b/index.ipynb
@@ -79,9 +79,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "slices_of_pie = 6\n",
-    "slices_eaten = 0\n",
+    "time_for_breakfast = 1468 # in seconds\n",
+    "number_of_cooked_pancakes = 0\n",
+    "time_used = 0\n",
     "\n",
+    "while number_of_cooked_pancakes <5:\n",
+    "    time_used += 5+27+5+27+6\n",
+    "    print(f'Time used is {time_used}')\n",
+    "    number_of_cooked_pancakes +=1\n",
+    "    print(f'Number of cooked pancakes is {number_of_cooked_pancakes}')\n",
+    "    time_remaining = time_for_breakfast - time_used\n",
+    "    print(f'Time remaining is {time_remaining}')\n",
+    "    \n",
     "# add your while loop here that achieves the same results as the for loop above\n"
    ]
   },
