Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -75,9 +75,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time used is 70\n",
+      "Number of cooked pancakes is 1\n",
+      "Time remaining is 1398\n",
+      "Time used is 140\n",
+      "Number of cooked pancakes is 2\n",
+      "Time remaining is 1328\n",
+      "Time used is 210\n",
+      "Number of cooked pancakes is 3\n",
+      "Time remaining is 1258\n",
+      "Time used is 280\n",
+      "Number of cooked pancakes is 4\n",
+      "Time remaining is 1188\n",
+      "Time used is 350\n",
+      "Number of cooked pancakes is 5\n",
+      "Time remaining is 1118\n"
+     ]
+    }
+   ],
    "source": [
     "time_for_breakfast = 1468 # in seconds\n",
     "number_of_cooked_pancakes = 0\n",
