Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -134,12 +134,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time used is 70\n",
+      "Number of cooked pancakes is 1\n",
+      "Time remaining is 1398\n",
+      "Time used is 140\n",
+      "Number of cooked pancakes is 2\n",
+      "Time remaining is 1328\n",
+      "Time used is 210\n",
+      "Number of cooked pancakes is 3\n",
+      "Time remaining is 1258\n",
+      "Time used is 280\n",
+      "Number of cooked pancakes is 4\n",
+      "Time remaining is 1188\n",
+      "Time used is 350\n",
+      "Number of cooked pancakes is 5\n",
+      "Time remaining is 1118\n"
+     ]
+    }
+   ],
    "source": [
     "time_for_breakfast = 1468 # in seconds\n",
     "number_of_cooked_pancakes = 0\n",
+    "time_used = 0\n",
+    "\n",
+    "while number_of_cooked_pancakes <5:\n",
+    "    time_used += 5+27+5+27+6\n",
+    "    print(f'Time used is {time_used}')\n",
+    "    number_of_cooked_pancakes +=1\n",
+    "    print(f'Number of cooked pancakes is {number_of_cooked_pancakes}')\n",
+    "    time_remaining = time_for_breakfast - time_used\n",
+    "    print(f'Time remaining is {time_remaining}')\n",
+    "    \n",
     "\n",
     "# write your while loop here\n",
     "\n",
