Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -75,43 +75,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time used is 70\n",
-      "Number of cooked pancakes is 1\n",
-      "Time remaining is 1398\n",
-      "Time used is 140\n",
-      "Number of cooked pancakes is 2\n",
-      "Time remaining is 1328\n",
-      "Time used is 210\n",
-      "Number of cooked pancakes is 3\n",
-      "Time remaining is 1258\n",
-      "Time used is 280\n",
-      "Number of cooked pancakes is 4\n",
-      "Time remaining is 1188\n",
-      "Time used is 350\n",
-      "Number of cooked pancakes is 5\n",
-      "Time remaining is 1118\n"
+     "ename": "NameError",
+     "evalue": "name 'slices_eaten' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-e7ab22933257>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwhile\u001b[0m \u001b[0mslices_eaten\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Another slice eaten!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mslices_eaten\u001b[0m \u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Now eaten {slices_eaten} slices!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'slices_eaten' is not defined"
      ]
     }
    ],
    "source": [
-    "time_for_breakfast = 1468 # in seconds\n",
-    "number_of_cooked_pancakes = 0\n",
-    "time_used = 0\n",
-    "\n",
-    "while number_of_cooked_pancakes <5:\n",
-    "    time_used += 5+27+5+27+6\n",
-    "    print(f'Time used is {time_used}')\n",
-    "    number_of_cooked_pancakes +=1\n",
-    "    print(f'Number of cooked pancakes is {number_of_cooked_pancakes}')\n",
-    "    time_remaining = time_for_breakfast - time_used\n",
-    "    print(f'Time remaining is {time_remaining}')\n",
+    "while slices_eaten <6:\n",
+    "    print('Another slice eaten!')\n",
+    "    slices_eaten +=1\n",
+    "    print(f'Now eaten {slices_eaten} slices!')\n",
     "    \n",
     "# add your while loop here that achieves the same results as the for loop above\n"
    ]
