--- a/index.ipynb
+++ b/index.ipynb
@@ -75,10 +75,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Another slice eaten!\n",
+      "Now eaten 1 slices!\n",
+      "Another slice eaten!\n",
+      "Now eaten 2 slices!\n",
+      "Another slice eaten!\n",
+      "Now eaten 3 slices!\n",
+      "Another slice eaten!\n",
+      "Now eaten 4 slices!\n",
+      "Another slice eaten!\n",
+      "Now eaten 5 slices!\n",
+      "Another slice eaten!\n",
+      "Now eaten 6 slices!\n"
+     ]
+    }
+   ],
    "source": [
+    "slices_of_pie = 6\n",
+    "slices_eaten = 0\n",
+    "\n",
     "while slices_eaten <6:\n",
     "    print('Another slice eaten!')\n",
     "    slices_eaten +=1\n",
