Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,8 @@
     "\n",
     "\n",
     "for patron in line_of_hungry_partons:\n",
-    "    if patron % 2 == \n",
+    "    if patron % 2 == 1\n",
+    "    \n",
     "# use a for or while loop to feed the hungry patrons who have an even number\n",
     "# add the patrons with an even number to the fed_patrons list\n",
     "# then remove the even numbered patrons from the line_of_hungry_patrons\n",
