--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
     "\n",
     "for patron in line_of_hungry_partons:\n",
     "    if patron % 2 == 0\n",
-    "    fed_partons += 1\n",
+    "    fed_partons.append\n",
     "    \n",
     "# use a for or while loop to feed the hungry patrons who have an even number\n",
     "# add the patrons with an even number to the fed_patrons list\n",
