Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,16 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-85f9cc21f1ce>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-85f9cc21f1ce>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if patron % 2 == 0\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "line_of_hungry_patrons = list(range(0,30))\n",
     "fed_patrons = []\n",
@@ -214,7 +223,7 @@
     "for patron in line_of_hungry_partons:\n",
     "    if patron % 2 == 0\n",
     "    fed_partons.append()\n",
-    "    print fed_patrons\n",
+    "    print(fed_patrons)\n",
     "    \n",
     "# use a for or while loop to feed the hungry patrons who have an even number\n",
     "# add the patrons with an even number to the fed_patrons list\n",
