--- a/index.ipynb
+++ b/index.ipynb
@@ -221,8 +221,8 @@
     "\n",
     "\n",
     "for patron in line_of_hungry_partons:\n",
-    "    if patron % 2 == 0\n",
-    "    fed_partons.append()\n",
+    "    if patron % 2 == 0:\n",
+    "        fed_partons.append()\n",
     "    print(fed_patrons)\n",
     "    \n",
     "# use a for or while loop to feed the hungry patrons who have an even number\n",
