Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,6 +226,7 @@
     "for patron in line_of_hungry_partons:\n",
     "    if patron % 2 == 0:\n",
     "        fed_partons.append()\n",
+    "    else \n",
     "    print(fed_patrons)\n",
     "    \n",
     "# use a for or while loop to feed the hungry patrons who have an even number\n",
