--- a/index.ipynb
+++ b/index.ipynb
@@ -203,18 +203,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'line_of_hungry_partons' is not defined",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-bdb3571e0623>, line 8)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-e9b817e33e53>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mpatron\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mline_of_hungry_partons\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mpatron\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mfed_partons\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'line_of_hungry_partons' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-bdb3571e0623>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    else print(1)\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -226,7 +223,7 @@
     "for patron in line_of_hungry_partons:\n",
     "    if patron % 2 == 0:\n",
     "        fed_partons.append()\n",
-    "    else \n",
+    "    else print(1)\n",
     "    print(fed_patrons)\n",
     "    \n",
     "# use a for or while loop to feed the hungry patrons who have an even number\n",
