Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28]\n"
+      "15\n"
      ]
     }
    ],
@@ -222,7 +222,7 @@
     "for patron in line_of_hungry_patrons:\n",
     "    if patron % 2 == 0:\n",
     "        fed_patrons.append(patron)\n",
-    "print(fed_patrons)\n",
+    "print(len(fed_patrons))\n",
     "    \n",
     "# use a for or while loop to feed the hungry patrons who have an even number\n",
     "# add the patrons with an even number to the fed_patrons list\n",
