--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_dog_person = \"str\"\n",
+    "first_dog_person = \"\n",
     "iteration_count = 0\n",
     "for person in people:\n",
     "    iteration_count += 1\n",
