Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -285,7 +285,7 @@
     "\n",
     "for person in people:\n",
     "    iteration_count += 1\n",
-    "    if \"pet\"\n",
+    "    if \"pet\" == \"Dog\"\n",
     "    # Continue writing code here"
    ]
   },
