--- a/index.ipynb
+++ b/index.ipynb
@@ -286,6 +286,8 @@
     "for person in people:\n",
     "    iteration_count += 1\n",
     "    if \"pet\" == \"Dog\"\n",
+    "    break\n",
+    "  \n",
     "    # Continue writing code here"
    ]
   },
