--- a/index.ipynb
+++ b/index.ipynb
@@ -285,8 +285,8 @@
     "\n",
     "for person in people:\n",
     "    iteration_count += 1\n",
-    "    if \"pet\" == \"Dog\"\n",
-    "    break\n",
+    "    if \"pet\" == \"Dog\":\n",
+    "        break\n",
     "  \n",
     "    # Continue writing code here"
    ]
