--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,9 @@
     "for person in people:\n",
     "    iteration_count += 1\n",
     "    if \"pet\" == \"Dog\":\n",
+    "        continue\n",
     "        \n",
+    "print \n",
     "    \n",
     "  \n",
     "    # Continue writing code here"
