Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -276,9 +276,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function print>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_dog_person = None\n",
     "iteration_count = 0\n",
@@ -286,6 +297,7 @@
     "for person in people:\n",
     "    iteration_count += 1\n",
     "    if \"pet\" == \"Dog\":\n",
+    "        print\n",
     "        continue\n",
     "        \n",
     "print \n",
