--- a/index.ipynb
+++ b/index.ipynb
@@ -297,8 +297,8 @@
     "for person in people:\n",
     "    iteration_count += 1\n",
     "    if \"pet\" == \"Dog\":\n",
-    "        print\n",
-    "        continue\n",
+    "        print \"{person} has a dog! Had to check {number} of records to find a dog owner.\"\n",
+    "        \n",
     "        \n",
     "print \n",
     "    \n",
