--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
     "for person in people:\n",
     "    iteration_count += 1\n",
     "    if \"pet\" == \"Dog\":\n",
-    "        print f\"{person} has a dog! Had to check {number} of records to find a dog owner.\"\n",
+    "        print(f\"{person} has a dog! Had to check {it} of records to find a dog owner.\"\n",
     "        \n",
     "        \n",
     "print \n",
