--- a/index.ipynb
+++ b/index.ipynb
@@ -297,10 +297,10 @@
     "for person in people:\n",
     "    iteration_count += 1\n",
     "    if \"pet\" == \"Dog\":\n",
-    "        print(f\"{person} has a dog! Had to check {it} of records to find a dog owner.\"\n",
+    "        print(f\"{person} has a dog! Had to check {iteration_count} of records to find a dog owner.\"\n",
     "        \n",
     "        \n",
-    "print \n",
+    " \n",
     "    \n",
     "  \n",
     "    # Continue writing code here"
