Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -276,18 +276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<function print>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-22-c2abb0c6e37b>, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-c2abb0c6e37b>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    # Continue writing code here\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
     }
    ],
    "source": [
@@ -299,8 +297,7 @@
     "    if \"pet\" == \"Dog\":\n",
     "        print(f\"{person} has a dog! Had to check {iteration_count} of records to find a dog owner.\"\n",
     "        \n",
-    "        \n",
-    " \n",
+    "         \n",
     "    \n",
     "  \n",
     "    # Continue writing code here"
