Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -276,18 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-22-c2abb0c6e37b>, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-c2abb0c6e37b>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    # Continue writing code here\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "first_dog_person = None\n",
     "iteration_count = 0\n",
@@ -295,7 +286,7 @@
     "for person in people:\n",
     "    iteration_count += 1\n",
     "    if \"pet\" == \"Dog\":\n",
-    "        print(f\"{person} has a dog! Had to check {iteration_count} of records to find a dog owner.\"\n",
+    "        print(f\"{person} has a dog! Had to check {iteration_count} of records to find a dog owner.\")\n",
     "        \n",
     "         \n",
     "    \n",
