--- a/index.ipynb
+++ b/index.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,6 +287,8 @@
     "    iteration_count += 1\n",
     "    if \"pet\" == \"Dog\":\n",
     "        print(f\"{person} has a dog! Had to check {iteration_count} of records to find a dog owner.\")\n",
+    "    else:\n",
+    "        continue\n",
     "        \n",
     "         \n",
     "    \n",
