Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -276,16 +276,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Daniel', 'age': 29, 'job': 'Engineer', 'pet': 'Cat', 'pet_name': 'Gato'}\n",
+      "{'name': 'Katie', 'age': 30, 'job': 'Teacher', 'pet': 'Dog', 'pet_name': 'Frank'}\n",
+      "{'name': 'Owen', 'age': 26, 'job': 'Sales person', 'pet': 'Cat', 'pet_name': 'Cosmo'}\n",
+      "{'name': 'Josh', 'age': 22, 'job': 'Student', 'pet': 'Cat', 'pet_name': 'Chat'}\n",
+      "{'name': 'Estelle', 'age': 35, 'job': 'French Diplomat', 'pet': 'Dog', 'pet_name': 'Gabby'}\n",
+      "{'name': 'Gustav', 'age': 24, 'job': 'Brewer', 'pet': 'Dog', 'pet_name': 'Helen'}\n"
+     ]
+    }
+   ],
    "source": [
     "first_dog_person = None\n",
     "iteration_count = 0\n",
     "\n",
     "for person in people:\n",
-    "    p\n",
-    "    \n",
+    "    iteration_count += 1\n",
+    "    if \"pet\" == \"Dog\":\n",
+    "        print(f\"{person} has a dog! Had to check {iteration_count} of records to find a dog owner.\")\n",
+    "    else:\n",
+    "        continue\n",
+    "            \n",
     "         \n",
     "    \n",
     "  \n",
