--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
     "for person in people:\n",
     "    iteration_count += 1\n",
     "    if \"pet\" == \"Dog\":\n",
-    "        print(f\"{person[]'name'} has a dog! Had to check {iteration_count} of records to find a dog owner.\")\n",
+    "        print(f\"{person['name']} has a dog! Had to check {iteration_count} of records to find a dog owner.\")\n",
     "    else:\n",
     "        continue\n",
     "            \n",
