--- a/index.ipynb
+++ b/index.ipynb
@@ -285,7 +285,7 @@
     "\n",
     "for person in people:\n",
     "    iteration_count += 1\n",
-    "    if \"pet\" == \"Dog\":\n",
+    "    if p\"pet\" == \"Dog\":\n",
     "        print(f\"{person['name']} has a dog! Had to check {iteration_count} of records to find a dog owner.\")\n",
     "    else:\n",
     "        continue\n",
