Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -276,16 +276,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Katie has a dog! Had to check 2 of records to find a dog owner.\n",
+      "Estelle has a dog! Had to check 5 of records to find a dog owner.\n",
+      "Gustav has a dog! Had to check 6 of records to find a dog owner.\n"
+     ]
+    }
+   ],
    "source": [
     "first_dog_person = None\n",
     "iteration_count = 0\n",
     "\n",
     "for person in people:\n",
     "    iteration_count += 1\n",
-    "    if p\"pet\" == \"Dog\":\n",
+    "    if person[\"pet\"] == \"Dog\":\n",
     "        print(f\"{person['name']} has a dog! Had to check {iteration_count} of records to find a dog owner.\")\n",
     "    else:\n",
     "        continue\n",
