Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -276,16 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Katie has a dog! Had to check 2 of records to find a dog owner.\n",
-      "Estelle has a dog! Had to check 5 of records to find a dog owner.\n",
-      "Gustav has a dog! Had to check 6 of records to find a dog owner.\n"
+      "Katie has a dog! Had to check 2 of records to find a dog owner.\n"
      ]
     }
    ],
@@ -297,7 +295,7 @@
     "    iteration_count += 1\n",
     "    if person[\"pet\"] == \"Dog\":\n",
     "        print(f\"{person['name']} has a dog! Had to check {iteration_count} of records to find a dog owner.\")\n",
-    "        \n",
+    "        break\n",
     "    else:\n",
     "        continue\n",
     "            \n",
