--- a/index.ipynb
+++ b/index.ipynb
@@ -318,6 +318,7 @@
    "outputs": [],
    "source": [
     "cat_owners = None\n",
+    "for person in people\n",
     "# for loop goes here"
    ]
   },
