--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,8 @@
    "outputs": [],
    "source": [
     "cat_owners = None\n",
-    "for person in people\n",
+    "for person in people:\n",
+    "    if person['pet'] \n",
     "# for loop goes here"
    ]
   },
