--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,8 @@
    "source": [
     "cat_owners = None\n",
     "for person in people:\n",
-    "    if person['pet'] \n",
+    "    if person['pet'] == \"Cat\":\n",
+    "        \n",
     "# for loop goes here"
    ]
   },
