Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,8 +319,7 @@
    "source": [
     "cat_owners = None\n",
     "for person in people:\n",
-    "    if person['pet'] == \"Cat\":\n",
-    "        \n",
+    "    if person['pet'] == \"Cat\" and person['']\n",
     "# for loop goes here"
    ]
   },
