Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,8 @@
    "source": [
     "cat_owners = None\n",
     "for person in people:\n",
-    "    if person['pet'] == \"Cat\" and person['age']<28\n",
+    "    if person['pet'] == \"Cat\" and person['age'] <28:\n",
+    "        \n",
     "# for loop goes here"
    ]
   },
