--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
     "cat_owners = None\n",
     "for person in people:\n",
     "    if person['pet'] == \"Cat\" and person['age'] <28:\n",
-    "        \n",
+    "        print \n",
     "# for loop goes here"
    ]
   },
