--- a/index.ipynb
+++ b/index.ipynb
@@ -317,10 +317,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cat_owners = \n",
     "cat_owners = None\n",
     "for person in people:\n",
     "    if person['pet'] == \"Cat\" and person['age'] <28:\n",
-    "        print \n",
+    "        print\n",
     "# for loop goes here"
    ]
   },
