Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,7 @@
     "cat_owners = None\n",
     "for person in people:\n",
     "    if person['pet'] == \"Cat\" and person['age'] <28:\n",
-    "        \n",
+    "        cat_owners.append(perso)\n",
     "# for loop goes here"
    ]
   },
