--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,8 @@
     "cat_owners = None\n",
     "for person in people:\n",
     "    if person['pet'] == \"Cat\" and person['age'] <28:\n",
-    "        cat_owners.append(perso)\n",
+    "        cat_owners.append(person['name'])\n",
+    "        pri\n",
     "# for loop goes here"
    ]
   },
