--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
     "for person in people:\n",
     "    if person['pet'] == \"Cat\" and person['age'] <28:\n",
     "        cat_owners.append(person['name'])\n",
-    "        pri\n",
+    "print(cat_owners)\n",
     "# for loop goes here"
    ]
   },
