--- a/index.ipynb
+++ b/index.ipynb
@@ -350,6 +350,8 @@
    "outputs": [],
    "source": [
     "thirty_something_yr_old = None\n",
+    "for person in people:\n",
+    "    \n",
     "# for loop goes here"
    ]
   },
