--- a/index.ipynb
+++ b/index.ipynb
@@ -351,7 +351,7 @@
    "source": [
     "thirty_something_yr_old = None\n",
     "for person in people:\n",
-    "    \n",
+    "    if person['age']\n",
     "# for loop goes here"
    ]
   },
