Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -351,7 +351,8 @@
    "source": [
     "thirty_something_yr_old = None\n",
     "for person in people:\n",
-    "    if person['age'] > 29\n",
+    "    if person['age'] > 29:\n",
+    "        print \n",
     "# for loop goes here"
    ]
   },
