--- a/index.ipynb
+++ b/index.ipynb
@@ -352,7 +352,7 @@
     "thirty_something_yr_old = None\n",
     "for person in people:\n",
     "    if person['age'] > 29:\n",
-    "        print \n",
+    "        print()\n",
     "# for loop goes here"
    ]
   },
