Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -352,7 +352,8 @@
     "thirty_something_yr_old = None\n",
     "for person in people:\n",
     "    if person['age'] > 29:\n",
-    "        print(person['name'],)\n",
+    "        print(person['name'], person['age'])\n",
+    "        break\n",
     "# for loop goes here"
    ]
   },
