--- a/index.ipynb
+++ b/index.ipynb
@@ -345,15 +345,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Katie 30\n"
+     ]
+    }
+   ],
    "source": [
     "thirty_something_yr_old = None\n",
     "for person in people:\n",
     "    if person['age'] > 29:\n",
     "        print(person['name'], person['age'])\n",
-    "        break\n",
+    "        break \n",
+    "        \n",
     "# for loop goes here"
    ]
   },
