Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -379,8 +379,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dog_owner_names = None\n",
-    "dog_names = None\n",
+    "dog_owner_names = []\n",
+    "dog_names = []\n",
+    "\n",
+    "\n",
     "# for loop goes here"
    ]
   },
