--- a/index.ipynb
+++ b/index.ipynb
@@ -382,7 +382,7 @@
     "dog_owner_names = []\n",
     "dog_names = []\n",
     "\n",
-    "\n",
+    "for person in \n",
     "# for loop goes here"
    ]
   },
