--- a/index.ipynb
+++ b/index.ipynb
@@ -382,7 +382,8 @@
     "dog_owner_names = []\n",
     "dog_names = []\n",
     "\n",
-    "for person in \n",
+    "for person in people:\n",
+    "    if person[]\n",
     "# for loop goes here"
    ]
   },
