Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,7 @@
     "dog_names = []\n",
     "\n",
     "for person in people:\n",
-    "    if person[]\n",
+    "    if person['pet'] == 'D'\n",
     "# for loop goes here"
    ]
   },
