Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -384,7 +384,7 @@
     "\n",
     "for person in people:\n",
     "    if person['pet'] == 'Dog':\n",
-    "        print\n",
+    "        dow\n",
     "# for loop goes here"
    ]
   },
