Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -384,7 +384,8 @@
     "\n",
     "for person in people:\n",
     "    if person['pet'] == 'Dog':\n",
-    "        dog_owner_names.app\n",
+    "        dog_owner_names.append(person['name'])\n",
+    "        \n",
     "# for loop goes here"
    ]
   },
