--- a/index.ipynb
+++ b/index.ipynb
@@ -386,7 +386,8 @@
     "    if person['pet'] == 'Dog':\n",
     "        dog_owner_names.append(person['name'])\n",
     "        dog_names.append(person['pet_name'])\n",
-    "p\n",
+    "print(dog_owner_names)\n",
+    "\n",
     "# for loop goes here"
    ]
   },
