Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,9 +375,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Katie', 'Estelle', 'Gustav']\n",
+      "['Frank', 'Gabby', 'Helen']\n"
+     ]
+    }
+   ],
    "source": [
     "dog_owner_names = []\n",
     "dog_names = []\n",
@@ -387,7 +396,7 @@
     "        dog_owner_names.append(person['name'])\n",
     "        dog_names.append(person['pet_name'])\n",
     "print(dog_owner_names)\n",
-    "\n",
+    "print(dog_names)\n",
     "# for loop goes here"
    ]
   },
