--- a/index.ipynb
+++ b/index.ipynb
@@ -417,7 +417,8 @@
     "list_of_numbers = list(range(0, 100))\n",
     "list_of_odd_numbers_plus_ten = []\n",
     "\n",
-    "while list_of_odd_numbers_plus_ten\n",
+    "while len(list_of_odd_numbers_plus_ten),35:\n",
+    "    \n",
     "\n",
     "# use a for loop to create a list of odd numbers from the list of numbers from 0 to 100\n",
     "# each time there is an odd number, add 10 to it and append it to the list_of_odd_numbers_plus_ten\n",
