Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -418,7 +418,7 @@
     "list_of_odd_numbers_plus_ten = []\n",
     "\n",
     "while len(list_of_odd_numbers_plus_ten)<35:\n",
-    "    if \n",
+    "    if number < \n",
     "    \n",
     "\n",
     "# use a for loop to create a list of odd numbers from the list of numbers from 0 to 100\n",
