--- a/index.ipynb
+++ b/index.ipynb
@@ -417,7 +417,8 @@
     "list_of_numbers = list(range(0, 100))\n",
     "list_of_odd_numbers_plus_ten = []\n",
     "\n",
-    "\n",
+    "for number in list_of_numbers:\n",
+    "    if num\n",
     "    \n",
     "\n",
     "# use a for loop to create a list of odd numbers from the list of numbers from 0 to 100\n",
