--- a/index.ipynb
+++ b/index.ipynb
@@ -418,7 +418,8 @@
     "list_of_odd_numbers_plus_ten = []\n",
     "\n",
     "for number in list_of_numbers:\n",
-    "    if number % 2 ==\n",
+    "    if number % 2 == 1:\n",
+    "        \n",
     "    \n",
     "\n",
     "# use a for loop to create a list of odd numbers from the list of numbers from 0 to 100\n",
