Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -419,7 +419,9 @@
     "\n",
     "for number in list_of_numbers:\n",
     "    if number % 2 == 1:\n",
-    "        list_of_odd_numbers_plus_ten.append(number+10)  \n",
+    "        list_of_odd_numbers_plus_ten.append(number+10)\n",
+    "    else:\n",
+    "        continue\n",
     "    \n",
     "\n",
     "# use a for loop to create a list of odd numbers from the list of numbers from 0 to 100\n",
