--- a/index.ipynb
+++ b/index.ipynb
@@ -418,7 +418,7 @@
     "list_of_odd_numbers_plus_ten = []\n",
     "\n",
     "for number in list_of_numbers:\n",
-    "    if number % 2 == 1 and \n",
+    "    if number % 2 == 1 \n",
     "        list_of_odd_numbers_plus_ten.append(number+10)\n",
     "    else:\n",
     "        continue\n",
