--- a/index.ipynb
+++ b/index.ipynb
@@ -416,10 +416,12 @@
    "source": [
     "list_of_numbers = list(range(0, 100))\n",
     "list_of_odd_numbers_plus_ten = []\n",
+    "count = 0\n",
     "\n",
     "for number in list_of_numbers:\n",
     "    if number % 2 == 1 \n",
     "        list_of_odd_numbers_plus_ten.append(number+10)\n",
+    "        count +=1\n",
     "        \n",
     "        \n",
     "    else:\n",
