Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -422,8 +422,7 @@
     "    if number % 2 == 1 \n",
     "        list_of_odd_numbers_plus_ten.append(number+10)\n",
     "        count +=1\n",
-    "             \n",
-    "    else:\n",
+    "    elif:\n",
     "        continue\n",
     "    \n",
     "\n",
