Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -419,7 +419,7 @@
     "count = 0\n",
     "\n",
     "for number in list_of_numbers:\n",
-    "    if number % 2 == 1 and cou \n",
+    "    if number % 2 == 1 and count <35 \n",
     "        list_of_odd_numbers_plus_ten.append(number+10)\n",
     "        count +=1\n",
     "    elif:\n",
