Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -422,7 +422,7 @@
     "    if number % 2 == 1 and count <35 \n",
     "        list_of_odd_numbers_plus_ten.append(number+10)\n",
     "        count +=1\n",
-    "    elif \n",
+    "    elif number % 2 == 1 and count = 35 \n",
     "        continue\n",
     "    \n",
     "\n",
