--- a/index.ipynb
+++ b/index.ipynb
@@ -419,10 +419,12 @@
     "count = 0\n",
     "\n",
     "for number in list_of_numbers:\n",
-    "    if number % 2 == 1 and count <35 \n",
+    "    if number % 2 == 1 and count <35: \n",
     "        list_of_odd_numbers_plus_ten.append(number+10)\n",
     "        count +=1\n",
-    "    elif number % 2 == 1 and count = 35 \n",
+    "    elif number % 2 == 1 and count = 35:\n",
+    "        \n",
+    "        break\n",
     "        continue\n",
     "    \n",
     "\n",
