--- a/index.ipynb
+++ b/index.ipynb
@@ -423,8 +423,8 @@
     "        list_of_odd_numbers_plus_ten.append(number+10)\n",
     "        count +=1\n",
     "    elif number % 2 == 1 and count = 35:\n",
-    "        \n",
     "        break\n",
+    "    else\n",
     "        continue\n",
     "    \n",
     "\n",
