--- a/index.ipynb
+++ b/index.ipynb
@@ -410,9 +410,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-36-87b2c99a0566>, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-36-87b2c99a0566>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    elif number % 2 == 1 and count = 35:\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "list_of_numbers = list(range(0, 100))\n",
     "list_of_odd_numbers_plus_ten = []\n",
@@ -427,7 +436,7 @@
     "    else\n",
     "        continue\n",
     "\n",
-    "        \n",
+    "list_of_odd_numbers_plus_ten   \n",
     "    \n",
     "\n",
     "# use a for loop to create a list of odd numbers from the list of numbers from 0 to 100\n",
