Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -410,15 +410,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-36-87b2c99a0566>, line 9)",
+     "evalue": "invalid syntax (<ipython-input-37-ef758a2057ee>, line 11)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-36-87b2c99a0566>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    elif number % 2 == 1 and count = 35:\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-ef758a2057ee>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    else\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -431,9 +431,9 @@
     "    if number % 2 == 1 and count <35: \n",
     "        list_of_odd_numbers_plus_ten.append(number+10)\n",
     "        count +=1\n",
-    "    elif number % 2 == 1 and count = 35:\n",
+    "    elif number % 2 == 1 and count == 35:\n",
     "        break\n",
-    "    else\n",
+    "    else:\n",
     "        continue\n",
     "\n",
     "list_of_odd_numbers_plus_ten   \n",
