--- a/index.ipynb
+++ b/index.ipynb
@@ -410,54 +410,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[11,\n",
-       " 13,\n",
-       " 15,\n",
-       " 17,\n",
-       " 19,\n",
-       " 21,\n",
-       " 23,\n",
-       " 25,\n",
-       " 27,\n",
-       " 29,\n",
-       " 31,\n",
-       " 33,\n",
-       " 35,\n",
-       " 37,\n",
-       " 39,\n",
-       " 41,\n",
-       " 43,\n",
-       " 45,\n",
-       " 47,\n",
-       " 49,\n",
-       " 51,\n",
-       " 53,\n",
-       " 55,\n",
-       " 57,\n",
-       " 59,\n",
-       " 61,\n",
-       " 63,\n",
-       " 65,\n",
-       " 67,\n",
-       " 69,\n",
-       " 71,\n",
-       " 73,\n",
-       " 75,\n",
-       " 77,\n",
-       " 79]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_of_numbers = list(range(0, 100))\n",
     "list_of_odd_numbers_plus_ten = []\n",
@@ -472,7 +427,7 @@
     "    else:\n",
     "        continue\n",
     "\n",
-    "list_of_odd_numbers_plus_ten\n",
+    "print(sum(list_of_odd_numbers_plus_ten))\n",
     "\n",
     "    \n",
     "\n",
